# miniwob-plusplus

./: .buildinfo  .gitignore  .pre-commit-config.yaml  404.html  CNAME  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  index.html  objects.inv  py.Dockerfile  pyproject.toml  record.py  requirements.txt  searchindex.js  setup.py
.github/ISSUE_TEMPLATE/: bug.md  proposal.md
.github/workflows/: buid.yml  build-docs.yml  build-publish.yaml  build.yml  pre-commit.yml
README/: index.html
_static/: documentation_options.js
content/action_space/: index.html
content/basic_usage/: index.html
content/custom_environment/: index.html
content/demonstrations/: index.html
content/dev_environment/: index.html
content/getting_started/: index.html
content/installation/: index.html
content/javascript_api/: index.html
content/key_combinations/: index.html
content/observation_space/: index.html
content/python_setup/: index.html
content/python_usage/: index.html
content/reward/: index.html
content/viewing/: index.html
demos/common/: shapes.js
demos/core/: record.js
demos/miniwob/: ascending-numbers.html  click-collapsible-2.html  click-collapsible-nodelay.html  click-tab-2-medium.html  click-tab-2.html  daily-calendar.html  drag-circle.html  drag-items-grid.html  find-greatest.html  form-sequence.html  generate-number.html  hover-shape.html  order-food.html  use-colorwheel-2.html
docs/: .gitignore  README.md  conf.py  index.md  requirements.txt
docs/_scripts/: gen_env_list.py  gen_mds.py  move_404.py  utils.py
docs/content/: action_space.md  basic_usage.md  custom_environment.md  demonstrations.md  dev_environment.md  getting_started.md  installation.md  javascript_api.md  key_combinations.md  observation_space.md  python_setup.md  python_usage.md  reward.md  setup.md  viewing.md
docs/scripts/: gen_mds.py  move_404.py  utils.py
environments/ascending-numbers/: index.html
environments/bisect-angle/: index.html
environments/book-flight/: index.html
environments/book-flight-nodelay/: index.html
environments/buy-ticket/: index.html
environments/choose-date/: index.html
environments/choose-date-easy/: index.html
environments/choose-date-medium/: index.html
environments/choose-date-nodelay/: index.html
environments/choose-list/: index.html
environments/circle-center/: index.html
environments/click-button/: index.html
environments/click-button-sequence/: index.html
environments/click-link/: index.html
genindex/: index.html
miniwob/: __init__.py  action.py  constants.py  dom.py  environment.py  fields.py  http_server.py  instance.py  observation.py  record.py  registration.py  reward.py  screenshot.py  selenium_actions.py  selenium_instance.py  spaces.py  state.py  utils.py
python/: README.md  requirements.txt
search/: index.html
tests/: __init__.py  test_action.py  test_api.py  test_environment.py  test_spaces.py  utils.py
viewer/: main.js  style.css  viewer.html
(+321 files in other folders)
